--- a/src/app.css
+++ b/src/app.css
@@ -96,4 +96,18 @@
     font-style: normal;
   }
   
+  .mukta-regular {
+    font-family: "Mukta", sans-serif;
+    font-weight: 700;
+    font-style:initial;
+  }
 
+
+
+.playfair-display {
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+}
+  
