--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&family=Ubuntu:wght@500&display=swap');
 
 //Roboto
 .roboto-thin {
@@ -118,7 +119,7 @@
 
 .ubuntu-bold {
   font-family: "Ubuntu", sans-serif;
-  font-weight: 600;
+  font-weight: 700;
   font-style: normal;
 }
 
@@ -146,3 +147,9 @@
   font-style: italic;
 }
 
+//ubuntu another
+.ubuntu-condensed-regular {
+  font-family: "Ubuntu Condensed", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
