--- a/src/app.css
+++ b/src/app.css
@@ -153,3 +153,14 @@
   font-style: italic;
 }
 
+.dm-serif-text-regular {
+  font-family: "DM Serif Text", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.dm-serif-text-regular-italic {
+  font-family: "DM Serif Text", serif;
+  font-weight: 400;
+  font-style: italic;
+}
