--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&family=Ubuntu:wght@500&display=swap');
 
+html {
+  scroll-behavior: smooth;
+}
 
 .roboto-thin {
     font-family: "Roboto", sans-serif;
